<resources>
    <string name="app_name">Paranote</string>
    <string name="app_chanel_1">Sticky notes</string>
    <string name="app_chanel_2">Automatic backup</string>
    <string name="app_save">Save note</string>
    <string name="app_edit">Edit note</string>

    <string name="nav_favorites">Favorites</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_reminders">Reminders</string>
    <string name="nav_archived">Archive</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About the app</string>
    <string name="nav_exit">Exit app</string>

    <string name="menu_search">Search your notes</string>
    <string name="menu_send">Send</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_unarchive">Unarchive</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_confirm">Confirm</string>
    <string name="menu_grid">Grid Mode</string>
    <string name="menu_feedback">Feedback</string>

    <string name="menu_camera">Scan</string>
    <string name="menu_draw">Draw</string>
    <string name="menu_upload">Import</string>
    <string name="menu_voice">Voice </string>
    <string name="menu_keyboard">Text</string>

    <string name="menu_share">Share</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_color">Color</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_duplicate">Duplicate</string>
    <string name="menu_reminder">Reminder</string>

    <string name="menu_save">Save</string>
    <string name="menu_back">Back</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_redo">Redo</string>
    <string name="menu_undo">Undo</string>

    <string name="text_view_note_title">Title…</string>
    <string name="text_view_note_body">Description…</string>
    <string name="text_view_options">Choose an option</string>
    <string name="text_view_storage">Import file</string>
    <string name="text_view_storage_image">Image</string>
    <string name="text_view_storage_text">Text</string>
    <string name="text_view_color">Choose a color</string>

    <string name="text_view_reminder_disable">Enable reminder</string>
    <string name="text_view_reminder_date">Date</string>
    <string name="text_view_reminder_hour">Hour</string>
    <string name="text_view_format_date">dd/MM/yyyy</string>
    <string name="text_view_format_hour">HH:mm</string>
    <string name="text_view_reminder_advance">Remember in advance?</string>
    <string name="text_view_reminder_repeat">Repeat?</string>

    <string-array name="text_view_advance_options">
        <item>Disable</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>

    <string-array name="text_view_repeat_options">
        <item>Never</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="text_view_backup_automatic_options">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string name="text_view_activity_error">Error: %1$s</string>
    <string name="text_view_scan_text">Scan</string>

    <string name="text_view_permission_camera_title">Camera permission</string>
    <string name="text_view_permission_camera_body">This feature requires permission from the camera, please grant permission to continue</string>

    <string name="text_view_permission_voice_title">Permission to record audio</string>
    <string name="text_view_permission_voice_body">This feature requires audio permission, please grant permission to continue</string>

    <string name="text_view_permission_storage_title">Storage permission</string>
    <string name="text_view_permission_storage_body">This feature requires read/write permission from storage, please grant permission to continue</string>

    <string name="text_view_unarchive">Do you want unarchive this note?</string>
    <string name="text_view_empty_notes">Your added notes appear here</string>
    <string name="text_view_empty_notes_favorite">Your favorite notes appear here</string>
    <string name="text_view_empty_notes_archived">Your archived notes appear here</string>
    <string name="text_view_empty_notes_reminders">Your notes with reminders appear here</string>

    <string name="text_view_more_info">Touch here to more information</string>
    <string name="text_view_version">Version %1$s</string>
    <string name="text_view_developer_by">Developed by</string>
    <string name="text_view_developers">Vieira Team Developers</string>
    <string name="text_view_email">E-mail</string>
    <string name="text_view_email_developers">vieirateam.contact@gmail.com</string>
    <string name="text_view_address">Address</string>
    <string name="text_view_address_developers">Maximiliano Scholze, 54, Canoinhas-SC, Brazil</string>
    <string name="text_view_site">Site</string>
    <string name="text_view_site_developers">https://sites.google.com/view/vieirateamdevelopers</string>
    <string name="text_view_github">Github</string>
    <string name="text_view_github_developers">https://github.com/vieirateamdevelopers</string>
    <string name="text_view_play_store">Play Store</string>
    <string name="text_view_play_store_developers">https://play.google.com/store/apps/dev?id=9150184155093771889</string>
    <string name="text_view_feedback_desc">Write a short review</string>

    <string name="text_view_dark_mode">Dark mode</string>
    <string name="text_view_dark_mode_text">The dark mode is capable of reducing energy use by a significant amount (depending on the devices screen technology). It improves visibility for users with vision problems and who are sensitive to the brightness of light and it also facilitates the device to be used by everyone in a low light environment.</string>
    <string name="text_view_backup">Backup</string>
    <string name="text_view_backup_doing">Doing backup</string>
    <string name="text_view_backup_finished">Backup completed successfully</string>
    <string name="text_view_do_backup">Do backup</string>
    <string name="text_view_backup_automatic">Automatic backup</string>
    <string name="text_view_backup_automatic_text">Automatic backup consists of a routine defined by a cycle of time that will automatically backup your notes.</string>
    <string name="text_view_restore">Restore</string>
    <string name="text_view_restore_doing">Doing restore</string>
    <string name="text_view_restore_finished">Restore completed successfully</string>
    <string name="text_view_backup_error">Backup error</string>
    <string name="text_view_restore_error">Error while performing the restore</string>
    <string name="text_view_do_restore">Do restore</string>
    <string name="text_view_backup_text">Back up all your notes when you prefer, or set a time cycle for the app to perform the backup automatically. You can restore the backup in the "Restore" option of the application.</string>
    <string name="text_view_restore_text">Recover all your notes from the app. Restoration may only be possible if there is at least one backup.</string>
    <string name="text_view_progress">Please wait…</string>
    <string name="text_view_delete">This action is permanent and cannot be undone</string>

    <string name="text_view_voice_recognition_title">Recognition voice</string>
    <string name="text_view_voice_recognition_body">Listening…</string>
    <string name="text_view_text_recognition_success">Text recognition complete</string>
    <string name="text_view_text_recognition_failure">Text recognition failure</string>
    <string name="text_view_voice_recognition_failure">Voice recognition failure</string>

</resources>
