<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction" >

    <item
        android:id="@+id/menu_copy"
        android:icon="@drawable/ic_drawable_copy"
        android:title="@string/menu_copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_drawable_share"
        android:title="@string/menu_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_color"
        android:icon="@drawable/ic_drawable_color"
        android:title="@string/menu_color"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_archive"
        android:icon="@drawable/ic_drawable_archive"
        android:title="@string/menu_archive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_drawable_delete"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_duplicate"
        android:icon="@drawable/ic_drawable_duplicate"
        android:title="@string/menu_duplicate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_drawable_favorite_2"
        android:title="@string/menu_favorite"
        app:showAsAction="ifRoom" />

</menu>