<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_undo"
        android:icon="@drawable/ic_drawable_undo"
        android:title="@string/menu_undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_redo"
        android:icon="@drawable/ic_drawable_redo"
        android:title="@string/menu_redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_clear"
        android:icon="@drawable/ic_drawable_close"
        android:title="@string/menu_clear"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_drawable_save"
        android:title="@string/menu_save"
        app:showAsAction="always" />

</menu>