<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_voice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/layout_margin_max"
    android:background="?attr/backgroundColor">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_voice_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_voice_recognition_title"
        android:textAlignment="center"
        android:textColor="?attr/backgroundViewColor"
        android:textSize="@dimen/text_title_max" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_voice"
        android:layout_width="@dimen/progress_bar_height"
        android:layout_height="@dimen/progress_bar_height"
        android:elevation="@dimen/elevation_dialog"
        android:layout_gravity="center"
        android:contentDescription="@string/menu_voice"
        app:srcCompat="@drawable/ic_drawable_voice_white"
        android:layout_marginTop="@dimen/layout_margin_max"
        android:layout_marginBottom="@dimen/layout_margin_max" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_voice_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/text_view_voice_recognition_body"
        android:textColorHint="?attr/backgroundViewColor"
        android:textColor="?attr/backgroundViewColor"
        android:textSize="@dimen/text_body_max" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_max"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_voice_cancel"
            android:layout_width="@dimen/compat_button_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/menu_cancel"
            android:textSize="@dimen/text_body_max"
            android:textColor="@color/colorLightMode"
            android:textAllCaps="false"
            android:elevation="@dimen/elevation_button"
            android:layout_marginEnd="@dimen/layout_margin_max" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_voice_confirm"
            android:layout_width="@dimen/compat_button_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/menu_confirm"
            android:textSize="@dimen/text_body_max"
            android:textColor="@color/colorLightMode"
            android:textAllCaps="false"
            android:elevation="@dimen/elevation_button" />

    </LinearLayout>

</LinearLayout>