<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <include layout="@layout/bottom_sheet_toolbar" />

    <LinearLayout
        android:id="@+id/linear_layout_base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_base_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_max"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/text_view_note_title"
            android:maxLength="50"
            android:textColor="?attr/backgroundViewColor"
            android:textSize="@dimen/text_title_max" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_base_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin_max"
            android:background="@null"
            android:gravity="start"
            android:hint="@string/text_view_note_body"
            android:inputType="textMultiLine"
            android:justificationMode="inter_word"
            android:scrollbarFadeDuration="@integer/scrollbar_fade_duration"
            android:scrollbarSize="@dimen/scrollbar_size_min"
            android:scrollbars="vertical"
            android:textColor="?attr/backgroundViewColor"
            android:textSize="@dimen/text_title_min"
            tools:targetApi="o" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_base_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_reminder_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_drawable_corners_reminder"
            android:drawableStart="@drawable/ic_drawable_reminder"
            android:drawablePadding="@dimen/layout_padding_max"
            android:drawableTint="@color/colorLightMode"
            android:paddingStart="@dimen/layout_margin_max"
            android:paddingEnd="@dimen/layout_margin_max"
            android:text="@string/menu_reminder"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textColor="@color/colorLightMode"
            android:textSize="@dimen/text_body_min"
            android:elevation="@dimen/elevation_fab_button"
            android:layout_marginStart="@dimen/layout_margin_min" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_button_base"
            android:layout_width="@dimen/floating_button_max"
            android:layout_height="@dimen/floating_button_max"
            android:contentDescription="@string/app_name"
            android:elevation="@dimen/elevation_fab_button"
            app:srcCompat="@drawable/ic_drawable_add"
            android:layout_marginTop="@dimen/layout_margin_max"
            android:layout_marginBottom="@dimen/layout_margin_max"
            android:layout_marginStart="@dimen/layout_margin_min"
            android:layout_marginEnd="@dimen/layout_margin_max" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
